--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/login.scss';
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import './styles/ball-circus.css';
+@import './styles/toastr.css';
+@import './styles/vendors/kendo.scss';
+@import './styles/consultorio.scss';
